@@ -254,3 +254,226 @@ M A S S   N O R M A L I Z E D   M O D E   S H A P E S
 M A T R I X    I T E R A T I O N S: 3
 There are 4 modes below 9.650854 Hz. ... All 4 modes were found.
 
+________________________________________________________________________________
+Frame3DD version: 20130318               http://frame3dd.sf.net/
+GPL Copyright (C) 1992-2013, Henri P. Gavin 
+Frame3DD is distributed in the hope that it will be useful but with no warranty.
+For details see the GNU Public Licence: http://www.fsf.org/copyleft/gpl.html
+________________________________________________________________________________
+
+Example E: a three dimensional structure showing lateral-torsional dynamic modes (units: kip  in) 
+Mon Dec 16 22:11:09 2013
+________________________________________________________________________________
+In 2D problems the Y-axis is vertical.  In 3D problems the Z-axis is vertical.
+________________________________________________________________________________
+   12 NODES              3 FIXED NODES       15 FRAME ELEMENTS   1 LOAD CASES   
+________________________________________________________________________________
+N O D E   D A T A                                           R E S T R A I N T S
+  Node       X              Y              Z         radius  Fx Fy Fz Mx My Mz
+    1       0.000000       0.000000       0.000000    0.000   0  0  0  0  0  0
+    2      72.000000       0.000000       0.000000    0.000   0  0  0  0  0  0
+    3     144.000000       0.000000       0.000000    0.000   0  0  0  0  0  0
+    4     144.000000      36.000000       0.000000    0.000   0  0  0  0  0  0
+    5     144.000000      72.000000       0.000000    0.000   0  0  0  0  0  0
+    6      72.000000      72.000000       0.000000    0.000   0  0  0  0  0  0
+    7       0.000000      72.000000       0.000000    0.000   0  0  0  0  0  0
+    8       0.000000      36.000000       0.000000    0.000   0  0  0  0  0  0
+    9       0.000000       0.000000    -120.000000    0.000   1  1  1  1  1  1
+   10     144.000000       0.000000    -120.000000    0.000   1  1  1  1  1  1
+   11      72.000000      72.000000    -120.000000    0.000   1  1  1  1  1  1
+   12      72.000000      36.000000       0.000000    0.000   0  0  0  0  0  0
+F R A M E   E L E M E N T   D A T A					(local)
+  Elmnt  J1    J2     Ax   Asy   Asz    Jxx     Iyy     Izz       E       G roll  density
+    1     1     2 1100.0 800.0 800.0 1000.0   500.0   500.0 999000.0 11500.0   0 7.00e-07
+    2     2     3 1100.0 800.0 800.0 1000.0   500.0   500.0 999000.0 11500.0   0 7.00e-07
+    3     3     4 1100.0 800.0 800.0 1000.0   500.0   500.0 999000.0 11500.0   0 7.00e-07
+    4     4     5 1100.0 800.0 800.0 1000.0   500.0   500.0 999000.0 11500.0   0 7.00e-07
+    5     5     6 1100.0 800.0 800.0 1000.0   500.0   500.0 999000.0 11500.0   0 7.00e-07
+    6     6     7 1100.0 800.0 800.0 1000.0   500.0   500.0 999000.0 11500.0   0 7.00e-07
+    7     7     8 1100.0 800.0 800.0 1000.0   500.0   500.0 999000.0 11500.0   0 7.00e-07
+    8     8     1 1100.0 800.0 800.0 1000.0   500.0   500.0 999000.0 11500.0   0 7.00e-07
+    9     9     1 1100.0 800.0 800.0    1.0   110.0   110.0  29000.0 11500.0   0 7.00e-07
+   10    10     3 1100.0 800.0 800.0    1.0   110.0   110.0  29000.0 11500.0   0 7.00e-07
+   11    11     6 1100.0 800.0 800.0    1.0   110.0   110.0  29000.0 11500.0   0 7.00e-07
+   12    12     2 1100.0 800.0 800.0 1000.0   500.0   500.0 999000.0 11500.0   0 7.00e-07
+   13    12     4 1100.0 800.0 800.0 1000.0   500.0   500.0 999000.0 11500.0   0 7.00e-07
+   14    12     6 1100.0 800.0 800.0 1000.0   500.0   500.0 999000.0 11500.0   0 7.00e-07
+   15    12     8 1100.0 800.0 800.0 1000.0   500.0   500.0 999000.0 11500.0   0 7.00e-07
+  Include shear deformations.
+  Include geometric stiffness.
+
+L O A D   C A S E   1   O F   1  ... 
+
+   Gravity X =  0.0    Gravity Y =  0.0    Gravity Z =  0.0 
+   1 concentrated loads
+   0 uniformly distributed loads
+   3 trapezoidally distributed loads
+   0 concentrated point loads
+   0 temperature loads
+   0 prescribed displacements
+ N O D A L   L O A D S  +  E Q U I V A L E N T   N O D A L   L O A D S  (global)
+  Node        Fx          Fy          Fz          Mxx         Myy         Mzz
+     1      -8.400       0.000       0.000       0.000     143.993       0.000
+     3     -12.600     500.000    -500.000       0.000     215.990       0.000
+     6     -16.800       0.000       0.000       0.000     287.986       0.000
+     9      -3.600       0.000       0.000       0.000     -96.007       0.000
+    10      -5.400       0.000       0.000       0.000    -144.010       0.000
+    11      -7.200       0.000       0.000       0.000    -192.014       0.000
+ T R A P E Z O I D A L   L O A D S					(local)
+  Elmnt       x1               x2               W1               W2
+     9       0.00000000       0.00000000       0.00000000       0.00000000  (x)
+     9       0.00000000       0.00000000       0.00000000       0.00000000  (y)
+     9       0.00000000     120.00000000       0.00000000       0.20000000  (z)
+    10       0.00000000       0.00000000       0.00000000       0.00000000  (x)
+    10       0.00000000       0.00000000       0.00000000       0.00000000  (y)
+    10       0.00000000     120.00000000       0.00000000       0.30000001  (z)
+    11       0.00000000       0.00000000       0.00000000       0.00000000  (x)
+    11       0.00000000       0.00000000       0.00000000       0.00000000  (y)
+    11       0.00000000     120.00000000       0.00000000       0.40000001  (z)
+
+E L A S T I C   S T I F F N E S S   A N A L Y S I S   via  L D L'  decomposition
+
+
+L O A D   C A S E   1   O F   1  ... 
+
+N O D E   D I S P L A C E M E N T S  					(global)
+  Node    X-dsp       Y-dsp       Z-dsp       X-rot       Y-rot       Z-rot
+     1    2.522827   -1.425470    0.000808    0.009636    0.000086    0.143923
+     2    2.522832    8.937161    0.007634   -0.000027   -0.000061    0.143949
+     3    2.522833   19.304885   -0.000882   -0.011442    0.000402    0.143959
+     4   -2.658603   19.304882   -0.387679   -0.010254    0.005639    0.143943
+     5   -7.840042   19.304881   -0.747448   -0.009871    0.010588    0.143960
+     6   -7.840037    8.937156   -0.001807   -0.000547    0.009709    0.143949
+     7   -7.840036   -1.425471    0.689013    0.009434    0.009481    0.143924
+     8   -2.658603   -1.425470    0.347340    0.009548    0.004576    0.143928
+    12   -2.658603    8.937160    0.006357   -0.000080    0.005099    0.143941
+F R A M E   E L E M E N T   E N D   F O R C E S				(local)
+  Elmnt  Node       Nx          Vy         Vz        Txx        Myy        Mzz
+     1      1    -76.279t      0.220   -109.896   1543.376   4975.452    221.842
+     1      2     76.279t     -0.220    109.896  -1543.376   2936.505    584.420
+     2      2    -18.857t    -45.645    -53.509   1823.106  -1287.934  -1614.531
+     2      3     18.857t     45.645     53.509  -1823.106   5140.722  -1476.399
+     3      3     87.032c     80.887   -318.958  -1672.819  22202.931   1462.603
+     3      4    -87.032c    -80.887    318.958   1672.819 -10754.089    998.372
+     4      4     32.356c     73.281   -212.542  -1581.024   9129.144    998.723
+     4      5    -32.356c    -73.281    212.542   1581.024  -1489.277   1471.748
+     5      5     73.281c    -32.356   -212.542   1489.286   1581.020  -1471.748
+     5      6    -73.281c     32.356    212.542  -1489.286  13776.636  -1617.639
+     6      6      7.879c     12.427      0.441   1594.128  -1593.285    583.927
+     6      7     -7.879c    -12.427     -0.441  -1594.128   1566.963    229.161
+     7      7     12.427c     -7.879      0.441  -1566.965  -1594.127   -229.161
+     7      8    -12.427c      7.879     -0.441   1566.965   1573.999   -118.859
+     8      8     21.402c     -6.702    105.014  -1434.387  -3111.820   -116.519
+     8      1    -21.402c      6.702   -105.014   1434.387   -676.116   -235.635
+     9      9   -214.910t     21.622     57.577    -13.793  -3305.990   1420.977
+     9      1    214.910t    -21.622    -69.577     13.793  -3541.067    867.270
+    10     10    234.550c   -367.323     44.030    -13.796  -3127.404 -24580.675
+    10      3   -234.550c    367.323    -62.030     13.796  -3467.915 -24026.040
+    11     11    480.360c   -154.299   -155.607    -13.795  10767.974 -11416.361
+    11      6   -480.360c    154.299    131.607     13.795  10710.891 -11392.534
+    12     12     45.865c     57.422     56.387  -1648.577  -1750.143    799.427
+    12      2    -45.865c    -57.422    -56.387   1648.577   -279.723   1030.111
+    13     12      7.606c    -54.676    106.417   1624.946  -7573.207  -2018.447
+    13      4     -7.606c     54.676   -106.417  -1624.946    -91.787  -1997.094
+    14     12    109.516c     66.204   -267.377  -1472.473  -1663.019    795.990
+    14      6   -109.516c    -66.204    267.377   1472.473  11287.684   1019.917
+    15     12     -1.177t      8.975    104.573   1537.820  -7397.096    423.029
+    15      8      1.177t     -8.975   -104.573  -1537.820   -132.579    235.377
+R E A C T I O N S							(global)
+  Node        Fx          Fy          Fz         Mxx         Myy         Mzz
+     9     -57.577      21.622    -214.910   -1420.977   -3305.990     -13.793
+    10     -44.030    -367.323     234.550   24580.675   -3127.404     -13.796
+    11     155.607    -154.299     480.360   11416.361   10767.974     -13.795
+R M S    R E L A T I V E    E Q U I L I B R I U M    E R R O R: 4.480e-20
+
+M O D A L   A N A L Y S I S   R E S U L T S
+  Total Mass:  4.164160e+00     Structural Mass:  7.761600e-01 
+N O D A L   M A S S E S	(diagonal of the mass matrix)			(global)
+  Node  X-mass      Y-mass      Z-mass      X-inrta     Y-inrta     Z-inrta
+     1 6.31084e-02 6.41586e-02 6.17055e-02 1.30339e+01 1.54221e+01 3.08436e+00
+     2 4.72677e-02 5.04357e-02 5.15033e-02 3.77424e-01 5.48942e+00 5.82485e+00
+     3 6.31084e-02 6.41586e-02 6.17055e-02 1.30339e+01 1.54221e+01 3.08436e+00
+     4 3.90953e-02 3.90778e-02 4.12132e-02 7.04448e-01 2.75731e+00 3.42816e+00
+     5 2.87877e-02 2.98378e-02 3.09055e-02 3.60624e-01 2.74891e+00 3.08434e+00
+     6 8.15884e-02 8.47564e-02 8.23033e-02 1.30507e+01 1.81627e+01 5.82488e+00
+     7 2.87877e-02 2.98378e-02 3.09055e-02 3.60624e-01 2.74891e+00 3.08434e+00
+     8 3.90953e-02 3.90778e-02 4.12132e-02 7.04448e-01 2.75731e+00 3.42816e+00
+     9 1.00127e+03 1.00127e+03 1.00127e+03 1.00127e+03 1.00127e+03 1.00127e+03
+    10 1.00127e+03 1.00127e+03 1.00127e+03 1.00127e+03 1.00127e+03 1.00127e+03
+    11 1.00127e+03 1.00127e+03 1.00127e+03 1.00127e+03 1.00127e+03 1.00127e+03
+    12 3.44558e+00 3.44768e+00 3.44981e+00 7.21248e-01 5.49782e+00 8.45539e+02
+  Use consistent mass matrix.
+N A T U R A L   F R E Q U E N C I E S   & 
+M A S S   N O R M A L I Z E D   M O D E   S H A P E S 
+ convergence tolerance: 1.000e-05 
+  MODE     1:   f= 0.601871 Hz,  T= 1.661487 sec
+		X- modal participation factor =  -1.9132e+00 
+		Y- modal participation factor =   5.9943e-01 
+		Z- modal participation factor =   4.0755e-04 
+  Node    X-dsp       Y-dsp       Z-dsp       X-rot       Y-rot       Z-rot
+     1  -4.105e-01   1.788e-02  -3.074e-05  -2.127e-04  -3.189e-05   1.822e-03
+     2  -4.105e-01   1.489e-01   1.821e-04  -1.272e-06   1.113e-05   1.820e-03
+     3  -4.105e-01   2.798e-01   6.055e-05   1.828e-04  -2.432e-05   1.821e-03
+     4  -4.761e-01   2.798e-01   7.085e-03   2.025e-04  -9.410e-05   1.820e-03
+     5  -5.416e-01   2.798e-01   1.453e-02   2.074e-04  -1.908e-04   1.818e-03
+     6  -5.416e-01   1.489e-01  -2.979e-05  -9.768e-06  -2.246e-04   1.819e-03
+     7  -5.416e-01   1.788e-02  -1.548e-02  -2.149e-04  -2.087e-04   1.819e-03
+     8  -4.761e-01   1.788e-02  -7.723e-03  -2.143e-04  -1.122e-04   1.820e-03
+     9  -4.614e-13   6.889e-15  -3.771e-13  -6.038e-13  -2.559e-11   8.057e-15
+    10  -3.768e-13   2.689e-13   7.427e-13  -1.738e-11  -2.476e-11   8.052e-15
+    11  -4.243e-13   1.198e-13  -3.654e-13  -8.810e-12  -3.156e-11   8.042e-15
+    12  -4.761e-01   1.489e-01   1.317e-04  -2.100e-06  -1.027e-04   1.820e-03
+  MODE     2:   f= 0.622296 Hz,  T= 1.606952 sec
+		X- modal participation factor =   6.0339e-01 
+		Y- modal participation factor =   1.9228e+00 
+		Z- modal participation factor =   1.0480e-03 
+  Node    X-dsp       Y-dsp       Z-dsp       X-rot       Y-rot       Z-rot
+     1   1.540e-01   4.692e-01   6.361e-05   5.902e-05   2.677e-06   1.159e-04
+     2   1.540e-01   4.777e-01   4.417e-04  -2.019e-06  -4.188e-06   1.143e-04
+     3   1.540e-01   4.857e-01   3.332e-05  -1.579e-04   1.874e-05   1.120e-04
+     4   1.499e-01   4.857e-01  -5.009e-03  -1.291e-04   8.332e-05   1.135e-04
+     5   1.457e-01   4.857e-01  -9.465e-03  -1.217e-04   1.369e-04   1.130e-04
+     6   1.457e-01   4.777e-01  -9.687e-05  -2.951e-05   1.138e-04   1.148e-04
+     7   1.457e-01   4.692e-01   6.314e-03   9.673e-05   7.716e-05   1.169e-04
+     8   1.499e-01   4.692e-01   2.883e-03   8.960e-05   2.654e-05   1.151e-04
+     9   1.737e-13   5.336e-13   7.803e-13  -2.949e-11   9.624e-12   5.124e-16
+    10   1.408e-13   4.383e-13   4.087e-13  -2.898e-11   9.264e-12   4.952e-16
+    11   1.111e-13   3.846e-13  -1.188e-12  -2.827e-11   8.359e-12   5.078e-16
+    12   1.499e-01   4.777e-01   3.540e-04  -4.782e-06   5.475e-05   1.144e-04
+  MODE     3:   f= 1.601568 Hz,  T= 0.624388 sec
+		X- modal participation factor =  -1.9004e-01 
+		Y- modal participation factor =   7.0072e-02 
+		Z- modal participation factor =   1.0546e-04 
+  Node    X-dsp       Y-dsp       Z-dsp       X-rot       Y-rot       Z-rot
+     1  -7.133e-01   1.364e+00  -2.266e-05  -1.638e-03  -5.578e-05  -1.871e-02
+     2  -7.133e-01   1.742e-02   7.200e-05  -1.153e-06   1.880e-05  -1.871e-02
+     3  -7.133e-01  -1.330e+00   2.833e-05   1.631e-03  -5.176e-05  -1.871e-02
+     4  -3.986e-02  -1.330e+00   5.727e-02   1.555e-03  -7.949e-04  -1.871e-02
+     5   6.337e-01  -1.330e+00   1.126e-01   1.524e-03  -1.564e-03  -1.871e-02
+     6   6.337e-01   1.742e-02  -5.636e-06  -1.585e-06  -1.542e-03  -1.871e-02
+     7   6.337e-01   1.364e+00  -1.128e-01  -1.525e-03  -1.567e-03  -1.871e-02
+     8  -3.986e-02   1.364e+00  -5.741e-02  -1.558e-03  -7.990e-04  -1.871e-02
+     9  -8.358e-13   1.500e-12  -2.779e-13  -8.316e-11  -4.545e-11  -8.273e-14
+    10  -6.882e-13  -1.188e-12   3.476e-13   7.808e-11  -4.398e-11  -8.273e-14
+    11   6.359e-13   1.481e-14  -6.914e-14  -1.053e-12   4.245e-11  -8.272e-14
+    12  -3.986e-02   1.742e-02   3.248e-05  -9.823e-07  -7.957e-04  -1.872e-02
+  MODE     4:   f= 9.650854 Hz,  T= 0.103618 sec
+		X- modal participation factor =   3.1972e-02 
+		Y- modal participation factor =  -5.0785e-04 
+		Z- modal participation factor =   1.2139e-03 
+  Node    X-dsp       Y-dsp       Z-dsp       X-rot       Y-rot       Z-rot
+     1  -1.670e-02   2.736e-02  -2.506e-03  -4.598e-02  -3.169e-04  -3.866e-04
+     2  -1.670e-02  -1.372e-04   3.428e-04  -1.483e-08  -5.500e-05  -3.832e-04
+     3  -1.670e-02  -2.758e-02   2.489e-03   4.603e-02  -3.031e-04  -3.862e-04
+     4  -2.650e-03  -2.758e-02   1.666e+00   4.610e-02  -2.306e-02  -3.894e-04
+     5   1.160e-02  -2.758e-02   3.322e+00   4.577e-02  -4.574e-02  -3.904e-04
+     6   1.160e-02  -1.372e-04   3.319e-05  -8.261e-06  -4.619e-02  -3.855e-04
+     7   1.160e-02   2.736e-02  -3.320e+00  -4.575e-02  -4.570e-02  -3.908e-04
+     8  -2.650e-03   2.736e-02  -1.665e+00  -4.607e-02  -2.305e-02  -3.895e-04
+     9  -1.449e-14  -5.457e-12  -3.074e-11   1.818e-10  -7.458e-13  -1.711e-15
+    10  -1.324e-14   5.372e-12   3.054e-11  -1.858e-10  -7.394e-13  -1.709e-15
+    11   5.452e-12  -1.367e-15   4.072e-13   5.074e-14   1.932e-10  -1.706e-15
+    12  -2.650e-03  -1.372e-04   2.991e-04  -4.283e-06  -2.320e-02  -3.984e-04
+M A T R I X    I T E R A T I O N S: 3
+There are 4 modes below 9.650854 Hz. ... All 4 modes were found.
+
